--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mindandbody",
+  "homepage": "https://mindandbody.sitesculptors.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
