Can send params to ExerciseLIst

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,5 @@
 RAPID_API_KEY=6ec2241d08mshc9f17c3bce4b106p141991jsnca2ab3cf927e
+
+edamamapp_id = 6f2bef3d
+
+edamamapp_key = e596b593b3d338818b8fe348cfc0ab8d
